--- a/history.html
+++ b/history.html
@@ -696,11 +696,11 @@
                   <!-- menu item -->
                   <li class="menu-item "><a href="portfolio.html">Portfolio</a></li>
                   <!-- menu item -->
-                  <li class="menu-item"><a href="history.html">History</a></li>
+                  <li class="menu-item current-menu-item"><a href="history.html">History</a></li>
                   <!-- menu item -->
                   <li class="menu-item"><a href="contact.html">Contact</a></li>
                   <!-- menu item -->
-                  <li class="menu-item current-menu-item"><a href="blog.html">Blog</a></li>
+                  <li class="menu-item"><a href="blog.html">Blog</a></li>
                 </ul>
                 <!-- menu list end -->
               </nav>
