--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
               </div>
               <!-- avatar end -->
               <!-- name -->
-              <h5 class="art-name mb-10"><a href="home.html">Abdul Basit</a></h5>
+              <h5 class="art-name mb-10"><a href="index.html">Abdul Basit</a></h5>
               <!-- post -->
               <div class="art-sm-text"><b>Full Stack Developer</b><br />Shadaab Colony PO Alipur <br>Islamabad |
                 Pakistan</div>
@@ -501,7 +501,7 @@
                 <!-- menu list -->
                 <ul class="main-menu">
                   <!-- menu item -->
-                  <li class="menu-item"><a href="home.html">Home</a></li>
+                  <li class="menu-item"><a href="index.html">Home</a></li>
                   <!-- menu item -->
                   <li class="menu-item"><a href="portfolio.html">Portfolio</a></li>
                   <!-- menu item -->
