--- a/index.html
+++ b/index.html
@@ -410,11 +410,10 @@
                         <!-- title -->
                         <h5 class="mb-15">Web Design</h5>
                         <!-- text -->
-                        <div class="mb-15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus esse
-                          commodi deserunt vitae, vero quasi! Veniam quaerat tenetur pariatur doloribus.</div>
+                        <div class="mb-15"></div>
                         <!-- button -->
-                        <div class="art-buttons-frame"><a href="contact.html"
-                            class="art-link art-color-link art-w-chevron">Order now</a></div>
+                        <div class="art-buttons-frame"><a href="portfolio.html"
+                            class="art-link art-color-link art-w-chevron">Portfolio</a></div>
                       </div>
                       <!-- service content end -->
                     </div>
@@ -432,11 +431,10 @@
                         <!-- title -->
                         <h5 class="mb-15">Web Development</h5>
                         <!-- text -->
-                        <div class="mb-15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus esse
-                          commodi deserunt vitae, vero quasi! Veniam quaerat tenetur pariatur doloribus.</div>
+                        <div class="mb-15"></div>
                         <!-- button -->
-                        <div class="art-buttons-frame"><a href="contact.html"
-                            class="art-link art-color-link art-w-chevron">Order now</a></div>
+                        <div class="art-buttons-frame"><a href="portfolio.html"
+                            class="art-link art-color-link art-w-chevron">Portfolio</a></div>
                       </div>
                       <!-- service content end -->
                     </div>
@@ -455,11 +453,10 @@
                         <!-- title -->
                         <h5 class="mb-15">UI/UX Design</h5>
                         <!-- text -->
-                        <div class="mb-15">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus esse
-                          commodi deserunt vitae, vero quasi! Veniam quaerat tenetur pariatur doloribus.</div>
+                        <div class="mb-15"></div>
                         <!-- button -->
-                        <div class="art-buttons-frame"><a href="contact.html"
-                            class="art-link art-color-link art-w-chevron">Order now</a></div>
+                        <div class="art-buttons-frame"><a href="portfolio.html"
+                            class="art-link art-color-link art-w-chevron">Portfolio</a></div>
                       </div>
                       <!-- service content end -->
                     </div>
