--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
               <!-- name -->
               <h5 class="art-name mb-10"><a href="index.html">Abdul Basit</a></h5>
               <!-- post -->
-              <div class="art-sm-text"><b>Full Stack Developer</b><br />Shadaab Colony PO Alipur <br>Islamabad |
-                Pakistan</div>
+              <div class="art-sm-text"><b>Full Stack Developer</b><br>Islamabad | Pakistan</div>
             </div>
             <!-- info bar header end -->
 
