--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                       <!-- title frame -->
                       <div class="art-title-frame">
                         <!-- title -->
-                        <h4>Price Plans</h4>
+                        <h4>Memories</h4>
                       </div>
                       <!-- title frame end -->
                     </div>
@@ -499,30 +499,11 @@
                     <!-- price -->
                     <div class="art-a art-price">
                       <!-- price body -->
-                      <div class="art-price-body">
-                        <h5 class="mb-30">Starter Price</h5>
-                        <!-- price cost -->
-                        <div class="art-price-cost">
-                          <div class="art-number">FREE<sup>*</sup></div>
-                        </div>
-                        <!-- price cost end -->
-                        <!-- price list -->
-                        <ul class="art-price-list">
-                          <!-- list item -->
-                          <li>Ui Design</li>
-                          <!-- list item -->
-                          <li>Web Development</li>
-                          <!-- list item -->
-                          <li class="art-empty-item">Logo design</li>
-                          <!-- list item -->
-                          <li class="art-empty-item">SEO optimization</li>
-                          <!-- list item -->
-                          <li class="art-empty-item">Wordpress integration</li>
-                        </ul>
-                        <!-- price list end -->
+                      <div class="art-price-body art-gallery">
+                        <img src="img/blog/3.jpg" alt="item" style="width: 100%;">
                         <!-- button -->
-                        <a href="contact.html" class="art-link art-color-link art-w-chevron">Order now</a>
-                        <div class="art-asterisk"><sup>*</sup>Free only when ordering paid services</div>
+                        <br>
+                        <a href="blog.html" class="art-link art-color-link art-w-chevron">See More</a>
                       </div>
                       <!-- price body end -->
                     </div>
@@ -535,31 +516,13 @@
                   <div class="col-lg-4">
 
                     <!-- price -->
-                    <div class="art-a art-price art-popular-price">
+                    <div class="art-a art-price">
                       <!-- price body -->
                       <div class="art-price-body">
-                        <h5 class="mb-30">Hourly payment</h5>
-                        <!-- price cost -->
-                        <div class="art-price-cost">
-                          <div class="art-number"><span>$</span>29<span>h</span></div>
-                        </div>
-                        <!-- price cost end -->
-                        <!-- price list -->
-                        <ul class="art-price-list">
-                          <!-- list item -->
-                          <li>Ui Design</li>
-                          <!-- list item -->
-                          <li>Web Development</li>
-                          <!-- list item -->
-                          <li>Logo design</li>
-                          <!-- list item -->
-                          <li class="art-empty-item">SEO optimization</li>
-                          <!-- list item -->
-                          <li class="art-empty-item">Wordpress integration</li>
-                        </ul>
-                        <!-- price list end -->
+                        <img src="img/blog/4.jpg" alt="item" style="width: 100%;">
                         <!-- button -->
-                        <a href="contact.html" class="art-link art-color-link art-w-chevron">Order now</a>
+                        <br>
+                        <a href="blog.html" class="art-link art-color-link art-w-chevron">See More</a>
                       </div>
                       <!-- price body end -->
                     </div>
@@ -575,28 +538,11 @@
                     <div class="art-a art-price">
                       <!-- price body -->
                       <div class="art-price-body">
-                        <h5 class="mb-30"> Full time</h5>
-                        <!-- price cost -->
-                        <div class="art-price-cost">
-                          <div class="art-number"><span>$</span>2999<span>m</span></div>
-                        </div>
-                        <!-- price cost end -->
-                        <!-- price list -->
-                        <ul class="art-price-list">
-                          <!-- list item -->
-                          <li>Ui Design</li>
-                          <!-- list item -->
-                          <li>Web Development</li>
-                          <!-- list item -->
-                          <li>Logo design</li>
-                          <!-- list item -->
-                          <li>SEO optimization</li>
-                          <!-- list item -->
-                          <li>Wordpress integration</li>
-                        </ul>
-                        <!-- price list end -->
+
+                        <img src="img/blog/7.jpg" alt="item" style="width: 100%;">
                         <!-- button -->
-                        <a href="contact.html" class="art-link art-color-link art-w-chevron">Order now</a>
+                        <br>
+                        <a href="blog.html" class="art-link art-color-link art-w-chevron">See More</a>
                       </div>
                       <!-- price body end -->
                     </div>
@@ -611,257 +557,7 @@
               </div>
               <!-- container end -->
 
-              <!-- container -->
-              <div class="container-fluid">
-
-                <!-- row -->
-                <div class="row">
-
-                  <!-- col -->
-                  <div class="col-lg-12">
-
-                    <!-- section title -->
-                    <div class="art-section-title">
-                      <!-- title frame -->
-                      <div class="art-title-frame">
-                        <!-- title -->
-                        <h4>Recommendations</h4>
-                      </div>
-                      <!-- title frame end -->
-                    </div>
-                    <!-- section title end -->
-
-                  </div>
-                  <!-- col end -->
-
-                  <!-- col -->
-                  <div class="col-lg-12">
-
-                    <!-- slider container -->
-                    <div class="swiper-container art-testimonial-slider" style="overflow: visible">
-                      <!-- slider wrapper -->
-                      <div class="swiper-wrapper">
-                        <!-- slide -->
-                        <div class="swiper-slide">
-
-                          <!-- testimonial -->
-                          <div class="art-a art-testimonial">
-                            <!-- testimonial body -->
-                            <div class="testimonial-body">
-                              <!-- photo -->
-                              <img class="art-testimonial-face" src="img/testimonials/face-1.jpg" alt="face">
-                              <!-- name -->
-                              <h5>Paul Trueman</h5>
-                              <div class="art-el-suptitle mb-15">Template author</div>
-                              <!-- text -->
-                              <div class="mb-15">Working with Artur has been a pleasure. Better yet - I alerted them of
-                                a minor issue before going to sleep. The issue was fixed the next morning. I couldn't
-                                ask for better support. Thank you Artur!
-                                This is easily a 5 star freelancer.</div>
-                            </div>
-                            <!-- testimonial body end -->
-                            <!-- testimonial footer -->
-                            <div class="art-testimonial-footer">
-                              <div class="art-left-side">
-                                <!-- star rate -->
-                                <ul class="art-star-rate">
-                                  <li><i class="fas fa-star"></i></li>
-                                  <li><i class="fas fa-star"></i></li>
-                                  <li><i class="fas fa-star"></i></li>
-                                  <li><i class="fas fa-star"></i></li>
-                                  <li><i class="fas fa-star"></i></li>
-                                </ul>
-                                <!-- star rate end -->
-                              </div>
-                              <div class="art-right-side">
-
-                              </div>
-                            </div>
-                            <!-- testimonial footer end -->
-                          </div>
-                          <!-- testimonial end -->
-
-                        </div>
-                        <!-- slide end -->
-
-                        <!-- slide -->
-                        <div class="swiper-slide">
-
-                          <!-- testimonial -->
-                          <div class="art-a art-testimonial">
-                            <!-- testimonial body -->
-                            <div class="testimonial-body">
-                              <!-- photo -->
-                              <img class="art-testimonial-face" src="img/testimonials/face-2.jpg" alt="face">
-                              <!-- name -->
-                              <h5>Paul Trueman</h5>
-                              <div class="art-el-suptitle mb-15">Template author</div>
-                              <!-- text -->
-                              <div class="mb-15">Working with Artur has been a pleasure. Better yet - I alerted them of
-                                a minor issue before going to sleep. The issue was fixed the next morning. I couldn't
-                                ask for better support. Thank you Artur!
-                                This is easily a 5 star freelancer.</div>
-                            </div>
-                            <!-- testimonial body end -->
-                            <!-- testimonial footer -->
-                            <div class="art-testimonial-footer">
-                              <div class="art-left-side">
-                                <!-- star rate -->
-                                <ul class="art-star-rate">
-                                  <li><i class="fas fa-star"></i></li>
-                                  <li><i class="fas fa-star"></i></li>
-                                  <li><i class="fas fa-star"></i></li>
-                                  <li><i class="fas fa-star"></i></li>
-                                  <li class="art-empty-item"><i class="fas fa-star"></i></li>
-                                </ul>
-                                <!-- star rate end -->
-                              </div>
-                              <div class="art-right-side">
-
-                              </div>
-                            </div>
-                            <!-- testimonial footer end -->
-                          </div>
-                          <!-- testimonial end -->
-
-                        </div>
-                        <!-- slide end -->
-
-                        <!-- slide -->
-                        <div class="swiper-slide">
-
-                          <!-- testimonial -->
-                          <div class="art-a art-testimonial">
-                            <!-- testimonial body -->
-                            <div class="testimonial-body">
-                              <!-- photo -->
-                              <img class="art-testimonial-face" src="img/testimonials/face-3.jpg" alt="face">
-                              <!-- name -->
-                              <h5>Paul Trueman</h5>
-                              <div class="art-el-suptitle mb-15">Template author</div>
-                              <!-- text -->
-                              <div class="mb-15">Working with Artur has been a pleasure. Better yet - I alerted them of
-                                a minor issue before going to sleep. The issue was fixed the next morning. I couldn't
-                                ask for better support. Thank you Artur!
-                                This is easily a 5 star freelancer.</div>
-                            </div>
-                            <!-- testimonial body end -->
-                            <!-- testimonial footer -->
-                            <div class="art-testimonial-footer">
-                              <div class="art-left-side">
-                                <!-- star rate -->
-                                <ul class="art-star-rate">
-                                  <li><i class="fas fa-star"></i></li>
-                                  <li><i class="fas fa-star"></i></li>
-                                  <li><i class="fas fa-star"></i></li>
-                                  <li><i class="fas fa-star"></i></li>
-                                  <li><i class="fas fa-star"></i></li>
-                                </ul>
-                                <!-- star rate end -->
-                              </div>
-                              <div class="art-right-side">
-
-                              </div>
-                            </div>
-                            <!-- testimonial footer end -->
-                          </div>
-                          <!-- testimonial end -->
-
-                        </div>
-                        <!-- slide end -->
-
-                        <!-- slide -->
-                        <div class="swiper-slide">
-
-                          <!-- testimonial -->
-                          <div class="art-a art-testimonial">
-                            <!-- testimonial body -->
-                            <div class="testimonial-body">
-                              <!-- photo -->
-                              <img class="art-testimonial-face" src="img/testimonials/face-4.jpg" alt="face">
-                              <!-- name -->
-                              <h5>Paul Trueman</h5>
-                              <div class="art-el-suptitle mb-15">Template author</div>
-                              <!-- text -->
-                              <div class="mb-15">Working with Artur has been a pleasure. Better yet - I alerted them of
-                                a minor issue before going to sleep. The issue was fixed the next morning. I couldn't
-                                ask for better support. Thank you Artur!
-                                This is easily a 5 star freelancer.</div>
-                            </div>
-                            <!-- testimonial body end -->
-                            <!-- testimonial footer -->
-                            <div class="art-testimonial-footer">
-                              <div class="art-left-side">
-                                <!-- star rate -->
-                                <ul class="art-star-rate">
-                                  <li><i class="fas fa-star"></i></li>
-                                  <li><i class="fas fa-star"></i></li>
-                                  <li><i class="fas fa-star"></i></li>
-                                  <li><i class="fas fa-star"></i></li>
-                                  <li><i class="fas fa-star"></i></li>
-                                </ul>
-                                <!-- star rate end -->
-                              </div>
-                              <div class="art-right-side">
-
-                              </div>
-                            </div>
-                            <!-- testimonial footer end -->
-                          </div>
-                          <!-- testimonial end -->
-
-                        </div>
-                        <!-- slide end -->
-
-                      </div>
-                      <!-- slider wrapper end -->
-                    </div>
-                    <!-- slider container end -->
-
-                  </div>
-                  <!-- col end -->
-
-                  <!-- col -->
-                  <div class="col-lg-12">
-
-                    <!-- slider navigation -->
-                    <div class="art-slider-navigation">
-
-                      <!-- left side -->
-                      <div class="art-sn-left">
-
-                        <!-- slider pagination -->
-                        <div class="swiper-pagination"></div>
-
-                      </div>
-                      <!-- left side end -->
-
-                      <!-- right side -->
-                      <div class="art-sn-right">
-
-                        <!-- slider navigation -->
-                        <div class="art-slider-nav-frame">
-                          <!-- prev -->
-                          <div class="art-slider-nav art-testi-swiper-prev"><i class="fas fa-chevron-left"></i></div>
-                          <!-- next -->
-                          <div class="art-slider-nav art-testi-swiper-next"><i class="fas fa-chevron-right"></i></div>
-                        </div>
-                        <!-- slider navigation -->
-
-                      </div>
-                      <!-- right side end -->
-
-                    </div>
-                    <!-- slider navigation end -->
-
-                  </div>
-                  <!-- col end -->
-
-                </div>
-                <!-- row end -->
-
-              </div>
-              <!-- container end -->
+             
 
               <!-- container -->
               <div class="container-fluid">
@@ -869,26 +565,26 @@
                 <!-- row -->
                 <div class="row">
                   <!-- col -->
-                  <div class="col-6 col-lg-3">
+                  <div class="col-3 col-lg-3">
                     <!-- brand -->
                     <img class="art-brand" src="img/brands/4.png" alt="brand" style="width: 50%;">
                   </div>
                   <!-- col end -->
                   <!-- col -->
-                  <div class="col-6 col-lg-3">
+                  <div class="col-3 col-lg-3">
                     <!-- brand -->
                     <img class="art-brand" src="img/brands/3.png" alt="brand" style="width: 50%;">
                   </div>
                   <!-- col end -->
                   <!-- col -->
-                  <div class="col-6 col-lg-3">
+                  <div class="col-3 col-lg-3">
                     <!-- brand -->
                     <img class="art-brand" src="img/brands/1.png" alt="brand" style="width: 50%;">
                   </div>
                   <!-- col end -->
 
                   <!-- col -->
-                  <div class="col-6 col-lg-3">
+                  <div class="col-3 col-lg-3">
                     <!-- brand -->
                     <img class="art-brand" src="img/brands/2.png" alt="brand" style="width: 50%;">
                   </div>
