--- a/contact.html
+++ b/contact.html
@@ -177,7 +177,7 @@
                 <div class="art-hard-skills-item">
                   <div class="art-skill-heading">
                     <!-- title -->
-                    <h6>PHP</h6>
+                    <h6>PHP / Angular</h6>
                   </div>
                   <!-- progressbar frame -->
                   <div class="art-line-progress">
@@ -192,7 +192,7 @@
                 <div class="art-hard-skills-item">
                   <div class="art-skill-heading">
                     <!-- title -->
-                    <h6>.NET / .NET CORE</h6>
+                    <h6>.NET / .NET CORE / Web API</h6>
                   </div>
                   <!-- progressbar frame -->
                   <div class="art-line-progress">
@@ -363,7 +363,7 @@
                     <div class="art-a art-card">
 
                       <!-- contact form -->
-                      <form id="form" class="art-contact-form">
+                      <form id="form" action="forms/contact.php" class="art-contact-form">
                         <!-- form field -->
                         <div class="art-form-field">
                           <!-- name input -->
