--- a/portfolio.html
+++ b/portfolio.html
@@ -244,11 +244,11 @@
               <a href="https://www.linkedin.com/in/abdulbasitmangral" target="_blank"><i
                   class="fab fa-linkedin-in"></i></a>
               <!-- social link -->
-              <a href="https://www.facebook.com/meabdulbasit1" target="_blank"><i class="fab fa-facebook"></i></a>
+              <a href="https://www.facebook.com/weabdulbasit" target="_blank"><i class="fab fa-facebook"></i></a>
               <!-- social link -->
-              <a href="https://www.instagram.com/meabdulbasit1" target="_blank"><i class="fab fa-instagram"></i></a>
+              <a href="https://www.instagram.com/weabdulbasit" target="_blank"><i class="fab fa-instagram"></i></a>
               <!-- social link -->
-              <a href="https://x.com/meabdulbasit1" target="_blank"><i class="fab fa-twitter"></i></a>
+              <a href="https://x.com/weabdulbasit" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
             <!-- sidebar social end -->
           </div>
