--- a/index.html
+++ b/index.html
@@ -297,11 +297,10 @@
                         <!-- main title -->
                         <div class="art-banner-title">
                           <!-- title -->
-                          <h3 class="mb-15">Software Engineer</h3>
+                          <h4 class="mb-15">Software Engineer</h4>
                           <!-- suptitle -->
-                          <div class="art-lg-text art-code mb-25">&lt;<i>code</i>&gt; Software Engineer at <span
-                              class="txt-rotate" data-period="2000"
-                              data-rotate='["WISEMAN INNOVATIONS."]'></span>&lt;/<i>code</i>&gt;
+                          <div class="art-lg-text art-code mb-25">&lt;<i>code</i>&gt; At <span class="txt-rotate"
+                              data-period="2000" data-rotate='["WISEMAN INNOVATIONS"]'></span>&lt;/<i>code</i>&gt;
                           </div>
                           <div class="art-buttons-frame" style="text-align: justify;">
                             <!-- button -->
@@ -395,6 +394,44 @@
                   </div>
                   <!-- col end -->
 
+
+                  <!-- col -->
+                  <div class="col-md-3 col-6">
+
+                    <!-- couner frame -->
+                    <div class="art-counter-frame">
+                      <!-- counter -->
+                      <div class="art-counter-box">
+                        <!-- counter number -->
+                        <span class="art-counter">3</span><span class="art-counter-plus">+</span>
+                      </div>
+                      <!-- counter end -->
+                      <!-- title -->
+                      <h6>Work With Companies</h6>
+                    </div>
+                    <!-- couner frame end -->
+
+                  </div>
+                  <!-- col end -->
+                  <!-- col -->
+                  <div class="col-md-3 col-6">
+
+                    <!-- couner frame -->
+                    <div class="art-counter-frame">
+                      <!-- counter -->
+                      <div class="art-counter-box">
+                        <!-- counter number -->
+                        <span class="art-counter">8</span><span class="art-counter-plus">+</span>
+                      </div>
+                      <!-- counter end -->
+                      <!-- title -->
+                      <h6>Language Proficiency</h6>
+                    </div>
+                    <!-- couner frame end -->
+
+                  </div>
+                  <!-- col end -->
+
                   <!-- col -->
                   <div class="col-md-3 col-6">
 
@@ -413,8 +450,6 @@
 
                   </div>
                   <!-- col end -->
-
-
                 </div>
                 <!-- row end -->
 
@@ -610,28 +645,28 @@
                 <!-- row -->
                 <div class="row">
                   <!-- col -->
-                  <div class="col-6 col-lg-3">
+                  <div class="col-3 col-lg-3">
                     <!-- brand -->
-                    <img class="art-brand" src="img/brands/4.png" alt="brand" style="width: 50%;">
+                    <img class="art-brand" src="img/brands/4.png" alt="brand" style="width: 100%;height: auto;">
                   </div>
                   <!-- col end -->
                   <!-- col -->
-                  <div class="col-6 col-lg-3">
+                  <div class="col-3 col-lg-3">
                     <!-- brand -->
-                    <img class="art-brand" src="img/brands/3.png" alt="brand" style="width: 50%;">
+                    <img class="art-brand" src="img/brands/3.png" alt="brand" style="width: 100%;height: auto;">
                   </div>
                   <!-- col end -->
                   <!-- col -->
-                  <div class="col-6 col-lg-3">
+                  <div class="col-3 col-lg-3">
                     <!-- brand -->
-                    <img class="art-brand" src="img/brands/1.png" alt="brand" style="width: 50%;">
+                    <img class="art-brand" src="img/brands/1.png" alt="brand" style="width: 100%;height: auto;">
                   </div>
                   <!-- col end -->
 
                   <!-- col -->
-                  <div class="col-6 col-lg-3">
+                  <div class="col-3 col-lg-3">
                     <!-- brand -->
-                    <img class="art-brand" src="img/brands/2.png" alt="brand" style="width: 50%;">
+                    <img class="art-brand" src="img/brands/2.png" alt="brand" style="width: 100%;height: auto;">
                   </div>
                   <!-- col end -->
 
