--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                       <!-- title frame -->
                       <div class="art-title-frame">
                         <!-- title -->
-                        <h4>My Services</h4>
+                        <h4>My Expertise</h4>
                       </div>
                       <!-- title frame end -->
                     </div>
@@ -480,7 +480,7 @@
                   <!-- col end -->
 
                   <!-- col -->
-                  <div class="col-lg-4 col-md-6">
+                  <div class="col-lg-3 col-md-6">
 
                     <!-- service -->
                     <div class="art-a art-service-icon-box">
@@ -501,7 +501,7 @@
                   </div>
                   <!-- col end -->
                   <!-- col -->
-                  <div class="col-lg-4 col-md-6">
+                  <div class="col-lg-3 col-md-6">
 
                     <!-- service -->
                     <div class="art-a art-service-icon-box">
@@ -523,7 +523,7 @@
                   <!-- col end -->
 
                   <!-- col -->
-                  <div class="col-lg-4 col-md-6">
+                  <div class="col-lg-3 col-md-6">
 
                     <!-- service -->
                     <div class="art-a art-service-icon-box">
@@ -543,7 +543,27 @@
 
                   </div>
                   <!-- col end -->
+                  <!-- col -->
+                  <div class="col-lg-3 col-md-6">
 
+                    <!-- service -->
+                    <div class="art-a art-service-icon-box">
+                      <!-- service content -->
+                      <div class="art-service-ib-content">
+                        <!-- title -->
+                        <h5 class="mb-15">Documentations</h5>
+                        <!-- text -->
+                        <div class="mb-15"></div>
+                        <!-- button -->
+                        <div class="art-buttons-frame"><a href="portfolio.html"
+                            class="art-link art-color-link art-w-chevron">Portfolio</a></div>
+                      </div>
+                      <!-- service content end -->
+                    </div>
+                    <!-- service end -->
+
+                  </div>
+                  <!-- col end -->
                 </div>
                 <!-- row end -->
 
@@ -801,7 +821,7 @@
 
     $(document).ready(function () {
       // Update the element with the ID "YearsExperience" with the calculated age
-      $("#YearsExperience").text(getAge('2020/06/01'));
+      $("#YearsExperience").text(getAge('2020/02/01'));
     });
   </script>
   <!-- jquery js -->
