--- a/history.html
+++ b/history.html
@@ -287,7 +287,7 @@
                 <div class="row p-30-0">
 
                   <!-- col -->
-                  <div class="col-lg-6">
+                  <div class="col-lg-12">
 
                     <!-- section title -->
                     <div class="art-section-title">
@@ -463,11 +463,34 @@
                         <div class="art-a art-timeline-content">
                           <div class="art-card-header">
                             <div class="art-left-side">
+                              <h5>Frontend Developer </h5>
+                              <div class="art-el-suptitle mb-15">The Greek Select</div>
+                            </div>
+                            <div class="art-right-side">
+                              <span class="art-date">Feb 2020- Dec 2020</span>
+                            </div>
+                          </div>
+                          <p>Shamsabad Murre Road, Rawalpindi | Pakistan
+                          </p>
+
+                        </div>
+
+
+
+                      </div>
+
+                      <div class="art-timeline-item">
+                        <div class="art-timeline-mark-light"></div>
+                        <div class="art-timeline-mark"></div>
+
+                        <div class="art-a art-timeline-content">
+                          <div class="art-card-header">
+                            <div class="art-left-side">
                               <h5>Software Engineer</h5>
                               <div class="art-el-suptitle mb-15">FREELANCE</div>
                             </div>
                             <div class="art-right-side">
-                              <span class="art-date">Dec 2020 - Current</span>
+                              <span class="art-date">Feb 2020 - Current</span>
                             </div>
                           </div>
 
@@ -514,7 +537,7 @@
                     <!-- row end -->
 
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-12">
 
                     <!-- section title -->
                     <div class="art-section-title">
@@ -607,30 +630,28 @@
                 <div class="row">
 
                   <!-- col -->
-                  <div class="col-6 col-lg-3">
+                  <div class="col-3 col-lg-3">
                     <!-- brand -->
-                    <img class="art-brand" src="img/brands/1.png" alt="brand">
+                    <img class="art-brand" src="img/brands/4.png" alt="brand" style="width: 100%;height: auto;">
+                  </div>
+                  <!-- col end -->
+                  <!-- col -->
+                  <div class="col-3 col-lg-3">
+                    <!-- brand -->
+                    <img class="art-brand" src="img/brands/3.png" alt="brand" style="width: 100%;height: auto;">
+                  </div>
+                  <!-- col end -->
+                  <!-- col -->
+                  <div class="col-3 col-lg-3">
+                    <!-- brand -->
+                    <img class="art-brand" src="img/brands/1.png" alt="brand" style="width: 100%;height: auto;">
                   </div>
                   <!-- col end -->
 
                   <!-- col -->
-                  <div class="col-6 col-lg-3">
+                  <div class="col-3 col-lg-3">
                     <!-- brand -->
-                    <img class="art-brand" src="img/brands/2.png" alt="brand">
-                  </div>
-                  <!-- col end -->
-
-                  <!-- col -->
-                  <div class="col-6 col-lg-3">
-                    <!-- brand -->
-                    <img class="art-brand" src="img/brands/3.png" alt="brand">
-                  </div>
-                  <!-- col end -->
-
-                  <!-- col -->
-                  <div class="col-6 col-lg-3">
-                    <!-- brand -->
-                    <img class="art-brand" src="img/brands/1.png" alt="brand">
+                    <img class="art-brand" src="img/brands/2.png" alt="brand" style="width: 100%;height: auto;">
                   </div>
                   <!-- col end -->
 
