--- a/portfolio.html
+++ b/portfolio.html
@@ -706,32 +706,30 @@
                 <!-- row -->
                 <div class="row">
                   <!-- col -->
-                  <div class="col-6 col-lg-3">
+                  <div class="col-3 col-lg-3">
                     <!-- brand -->
-                    <img class="art-brand" src="img/brands/4.png" alt="brand" style="width: 50%;">
+                    <img class="art-brand" src="img/brands/4.png" alt="brand" style="width: 100%;height: auto;">
                   </div>
                   <!-- col end -->
                   <!-- col -->
-                  <div class="col-6 col-lg-3">
+                  <div class="col-3 col-lg-3">
                     <!-- brand -->
-                    <img class="art-brand" src="img/brands/3.png" alt="brand" style="width: 50%;">
+                    <img class="art-brand" src="img/brands/3.png" alt="brand" style="width: 100%;height: auto;">
                   </div>
                   <!-- col end -->
                   <!-- col -->
-                  <div class="col-6 col-lg-3">
+                  <div class="col-3 col-lg-3">
                     <!-- brand -->
-                    <img class="art-brand" src="img/brands/1.png" alt="brand" style="width: 50%;">
+                    <img class="art-brand" src="img/brands/1.png" alt="brand" style="width: 100%;height: auto;">
                   </div>
                   <!-- col end -->
 
                   <!-- col -->
-                  <div class="col-6 col-lg-3">
+                  <div class="col-3 col-lg-3">
                     <!-- brand -->
-                    <img class="art-brand" src="img/brands/2.png" alt="brand" style="width: 50%;">
+                    <img class="art-brand" src="img/brands/2.png" alt="brand" style="width: 100%;height: auto;">
                   </div>
                   <!-- col end -->
-
-
 
                 </div>
                 <!-- row end -->
