--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                             <div class="art-code"><i>Core Technical Competencies:</i></div>
 
                             <ul style="color: white;">
-                              <li><strong>Backend Development:</i> Proficient in ASP.NET MVC & Core, SQL Server,
+                              <li><strong>Backend Development:</strong> Proficient in ASP.NET MVC & Core, SQL Server,
                                   and MySQL, leveraging technologies like LINQ and Dapper to build efficient,
                                   data-driven solutions.</li>
                               <li><strong>Frontend Development:</strong> Expertise in modern web technologies,
