--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
                       </div>
                       <div class="col-12 col-md-6">
                         <!-- button -->
-                        <div class="art-lg-text art-code mb-25" style="margin-top: 15px;">Sr. Software Engineer At <span style="color: #FFC107;"
-                            class="txt-rotate" data-period="2000" data-rotate='["WISEMAN INNOVATIONS (I-9)"]'></span>
+                        <div class="art-lg-text art-code mb-25" style="margin-top: 15px;">Software Engineer At <span
+                            style="color: #FFC107;" class="txt-rotate" data-period="2000"
+                            data-rotate='["WISEMAN INNOVATIONS (I-9)"]'></span>
                         </div>
                         <p style="color: white;">As a seasoned Full Stack Developer, I thrive in
                           dynamic
@@ -366,7 +367,7 @@
                             <!-- suptitle -->
                             <div class="row">
                               <div class="col-12 col-md-4">
-                                <div class="art-lg-text art-code mb-25">Sr. Software Engineer At <span
+                                <div class="art-lg-text art-code mb-25">Software Engineer .Net At <span
                                     style="color: #FFC107;" class="txt-rotate" data-period="2000"
                                     data-rotate='["WISEMAN INNOVATIONS"]'></span>
                                 </div>
@@ -665,7 +666,7 @@
                       <!-- title frame -->
                       <div class="art-title-frame">
                         <!-- title -->
-                        <h4>Memories</h4>
+                        <h4>Experiences</h4>
                       </div>
                       <!-- title frame end -->
                     </div>
@@ -681,10 +682,21 @@
                     <div class="art-a art-price">
                       <!-- price body -->
                       <div class="art-price-body art-gallery">
-                        <img src="img/blog/3.jpg" alt="item" style="width: 100%;">
+                        <div class="art-a art-timeline-content">
+                          <div class="art-card-header">
+                            <div class="art-left-side">
+                              <h5>Software Engineer</h5>
+                              <div class="art-el-suptitle mb-15">Wiseman Innovations (Pvt) Ltd</div>
+                            </div>
+                            <div class="art-right-side">
+                              <span class="art-date">Feb 2023 - Current</span>
+                            </div>
+                          </div>
+                          <p>Software Technology Park 3, Service Rd N, I-9/3, Islamabad | Pakistan</p>
+                        </div>
+
                         <!-- button -->
-                        <br>
-                        <a href="blog.html" class="art-link art-color-link art-w-chevron">See More</a>
+                        <a href="history.html" class="art-link art-color-link art-w-chevron">See More</a>
                       </div>
                       <!-- price body end -->
                     </div>
@@ -700,10 +712,22 @@
                     <div class="art-a art-price">
                       <!-- price body -->
                       <div class="art-price-body">
-                        <img src="img/blog/4.jpg" alt="item" style="width: 100%;">
+                        <div class="art-a art-timeline-content">
+                          <div class="art-card-header">
+                            <div class="art-left-side">
+                              <h5>Software Engineer</h5>
+                              <div class="art-el-suptitle mb-15">APP IN SNAP (Pvt) Ltd</div>
+                            </div>
+                            <div class="art-right-side">
+                              <span class="art-date">Dec 2021 - Feb 2023</span>
+                            </div>
+                          </div>
+                          <p>Gulberg Green, Wazir Arcade, Plot No. 95,96, Business Square, Block-C, Islamabad | Pakistan
+                          </p>
+                        </div>
+
                         <!-- button -->
-                        <br>
-                        <a href="blog.html" class="art-link art-color-link art-w-chevron">See More</a>
+                        <a href="history.html" class="art-link art-color-link art-w-chevron">See More</a>
                       </div>
                       <!-- price body end -->
                     </div>
@@ -720,10 +744,21 @@
                       <!-- price body -->
                       <div class="art-price-body">
 
-                        <img src="img/blog/7.jpg" alt="item" style="width: 100%;">
+                        <div class="art-a art-timeline-content">
+                          <div class="art-card-header">
+                            <div class="art-left-side">
+                              <h5>Junior Lecturer</h5>
+                              <div class="art-el-suptitle mb-15">CAPITAL INSTITUTE OF MANAGEMENT SCIENCE</div>
+                            </div>
+                            <div class="art-right-side">
+                              <span class="art-date">Jan 2021- OCT 2021</span>
+                            </div>
+                          </div>
+                          <p>Lehtrar Road, Tarlai kalan, School stop, Islamabad | Pakistan
+                          </p>
+                        </div>
                         <!-- button -->
-                        <br>
-                        <a href="blog.html" class="art-link art-color-link art-w-chevron">See More</a>
+                        <a href="history.html" class="art-link art-color-link art-w-chevron">See More</a>
                       </div>
                       <!-- price body end -->
                     </div>
