--- a/contact.html
+++ b/contact.html
@@ -78,8 +78,9 @@
                       </div>
                       <div class="col-12 col-md-6">
                         <!-- button -->
-                        <div class="art-lg-text art-code mb-25" style="margin-top: 15px;">Sr. Software Engineer At <span style="color: #FFC107;"
-                            class="txt-rotate" data-period="2000" data-rotate='["WISEMAN INNOVATIONS (I-9)"]'></span>
+                        <div class="art-lg-text art-code mb-25" style="margin-top: 15px;">Sr. Software Engineer At <span
+                            style="color: #FFC107;" class="txt-rotate" data-period="2000"
+                            data-rotate='["WISEMAN INNOVATIONS (I-9)"]'></span>
                         </div>
                         <p style="color: white;">As a seasoned Full Stack Developer, I thrive in
                           dynamic
@@ -358,12 +359,82 @@
                       <!-- title frame -->
                       <div class="art-title-frame">
                         <!-- title -->
+                        <h4>About Me</h4>
+                      </div>
+                      <!-- title frame end -->
+                    </div>
+                    <!-- section title end -->
+
+                  </div>
+                  <!-- col end -->
+                  <!-- col -->
+                  <div class="col-12 col-xl-12">
+                    <!-- contact card -->
+                    <div class="art-a art-card">
+                      <div class=" p-15-15" style="color: white;">
+                        <p>Hello, I'm Abdul Basit, a Full Stack Developer with a strong background in both frontend and
+                          backend technologies. I have a proven track record of delivering high-performance, scalable
+                          web applications, and I am passionate about creating seamless, user-friendly experiences.</p>
+
+                        <p>Throughout my career, I have honed my skills in designing, developing, and optimizing complex
+                          web applications. My core technical competencies include:</p>
+
+                        <ul>
+                          <li><strong style="color: #FFC107;">Backend Development: </strong> Expertise in ASP.NET MVC & Core, SQL Server, and MySQL, utilizing tools like LINQ and Dapper to create efficient, data-driven systems.</li>
+                          <li><strong style="color: #FFC107;">Frontend Development: </strong>  Proficiency in JavaScript, PHP, Angular, and CSS, enabling the creation of intuitive, responsive web interfaces.</li>
+                          <li><strong style="color: #FFC107;">API Development & Integration: </strong> Extensive experience in designing and building RESTful APIs for scalable, high-availability systems.</li>
+                          <li><strong style="color: #FFC107;">Cloud & DevOps: </strong> Familiarity with Azure, utilizing cloud platforms to optimize application performance, security, and deployment.</li>
+                          <li><strong style="color: #FFC107;">Version Control & Collaboration: </strong> Proficient with GitHub and TFS, ensuring smooth version control and effective team collaboration.</li>
+                          <li><strong style="color: #FFC107;">UI/UX & Graphic Design: </strong> A strong understanding of UI/UX principles, blending my development expertise with graphic design to enhance user experience.</li>
+                        </ul>
+                        <p>In my work, I am committed to managing the full software development lifecycle—from
+                          requirements gathering and system design to deployment and ongoing support. I strive to build
+                          applications that are not only functional but also optimized for performance, scalability, and
+                          security.</p>
+
+                        <p>With my diverse skill set and problem-solving mindset, I am always eager to take on new
+                          challenges and contribute to the success of any project or team I am part of.</p>
+
+                        <p>Feel free to reach out if you'd like to connect or learn more!</p>
+                      </div>
+                    </div>
+                    <!-- contact card end -->
+                  </div>
+                  <!-- col -->
+                  <div class="col-lg-12">
+
+                    <!-- section title -->
+                    <div class="art-section-title">
+                      <!-- title frame -->
+                      <div class="art-title-frame">
+                        <!-- title -->
                         <h4>Contact information</h4>
                       </div>
                       <!-- title frame end -->
                     </div>
                     <!-- section title end -->
 
+                  </div>
+                  <!-- col end -->
+                   <!-- col -->
+                  <div class="col-12 col-xl-6">
+                    <!-- contact card -->
+                    <div class="art-a art-card">
+                      <div class="art-table p-15-15">
+                        <ul>
+                          <li>
+                            <h6>Email:</h6><span>abdulbasitmangral@gmail.com</span>
+                          </li>
+                          <li>
+                            <h6>Contact:</h6><span>(+92) 302 8952654</span>
+                          </li>
+                          <li>
+                            <h6>Teams:</h6><span>abdulbasitmangral@gmail.com</span>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                    <!-- contact card end -->
                   </div>
                   <!-- col end -->
                   <!-- col -->
@@ -388,27 +459,7 @@
                     <!-- contact card end -->
                   </div>
                   <!-- col end -->
-                  <!-- col -->
-                  <div class="col-12 col-xl-6">
-                    <!-- contact card -->
-                    <div class="art-a art-card">
-                      <div class="art-table p-15-15">
-                        <ul>
-                          <li>
-                            <h6>Email:</h6><span>abdulbasitmangral@gmail.com</span>
-                          </li>
-                          <li>
-                            <h6>Contact:</h6><span>(+92) 302 8952654</span>
-                          </li>
-                          <li>
-                            <h6>Teams:</h6><span>abdulbasitmangral@gmail.com</span>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                    <!-- contact card end -->
-                  </div>
-                  <!-- col end -->
+                  
 
                   <!-- col -->
                   <div class="col-lg-12">
