--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             style="color: #FFC107;" class="txt-rotate" data-period="2000"
                             data-rotate='["WISEMAN INNOVATIONS (I-9)"]'></span>
                         </div>
-                        <p style="color: white;">As a seasoned Full Stack Developer, I thrive in
+                        <p style="color: white;margin-top: 10px;">As a seasoned Full Stack Developer, I thrive in
                           dynamic
                           environments where innovation
                           meets real-world problem-solving. At Wiseman Innovations, I leverage a robust tech stack
