--- a/index.html
+++ b/index.html
@@ -894,6 +894,7 @@
       <div class="art-preloader-content">
         <!-- title -->
         <h4>Abdul Basit</h4>
+        <h6 style="color: #FFC107;">Software Engineer .Net</h6>
         <!-- progressbar -->
         <div id="preloader" class="art-preloader-load"></div>
       </div>
