--- a/blog.html
+++ b/blog.html
@@ -643,6 +643,18 @@
                       <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
                     </span> Abdul Basit
                   </div>
+                  <div>
+                    <!-- social link -->
+                    <a href="https://www.linkedin.com/in/abdulbasitmangral" target="_blank"><i
+                        class="fab fa-linkedin-in"></i></a>
+                    <!-- social link -->
+                    <a href="https://www.facebook.com/weabdulbasit" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <!-- social link -->
+                    <a href="https://www.instagram.com/weabdulbasit" target="_blank"><i
+                        class="fab fa-instagram"></i></a>
+                    <!-- social link -->
+                    <a href="https://x.com/weabdulbasit" target="_blank"><i class="fab fa-twitter"></i></a>
+                  </div>
                 </footer>
                 <!-- footer end -->
 
