--- a/contact.html
+++ b/contact.html
@@ -380,12 +380,22 @@
                           web applications. My core technical competencies include:</p>
 
                         <ul>
-                          <li><strong style="color: #FFC107;">Backend Development: </strong> Expertise in ASP.NET MVC & Core, SQL Server, and MySQL, utilizing tools like LINQ and Dapper to create efficient, data-driven systems.</li>
-                          <li><strong style="color: #FFC107;">Frontend Development: </strong>  Proficiency in JavaScript, PHP, Angular, and CSS, enabling the creation of intuitive, responsive web interfaces.</li>
-                          <li><strong style="color: #FFC107;">API Development & Integration: </strong> Extensive experience in designing and building RESTful APIs for scalable, high-availability systems.</li>
-                          <li><strong style="color: #FFC107;">Cloud & DevOps: </strong> Familiarity with Azure, utilizing cloud platforms to optimize application performance, security, and deployment.</li>
-                          <li><strong style="color: #FFC107;">Version Control & Collaboration: </strong> Proficient with GitHub and TFS, ensuring smooth version control and effective team collaboration.</li>
-                          <li><strong style="color: #FFC107;">UI/UX & Graphic Design: </strong> A strong understanding of UI/UX principles, blending my development expertise with graphic design to enhance user experience.</li>
+                          <li><strong style="color: #FFC107;">Backend Development: </strong> Expertise in ASP.NET MVC &
+                            Core, SQL Server, and MySQL, utilizing tools like LINQ and Dapper to create efficient,
+                            data-driven systems.</li>
+                          <li><strong style="color: #FFC107;">Frontend Development: </strong> Proficiency in JavaScript,
+                            PHP, Angular, and CSS, enabling the creation of intuitive, responsive web interfaces.</li>
+                          <li><strong style="color: #FFC107;">API Development & Integration: </strong> Extensive
+                            experience in designing and building RESTful APIs for scalable, high-availability systems.
+                          </li>
+                          <li><strong style="color: #FFC107;">Cloud & DevOps: </strong> Familiarity with Azure,
+                            utilizing cloud platforms to optimize application performance, security, and deployment.
+                          </li>
+                          <li><strong style="color: #FFC107;">Version Control & Collaboration: </strong> Proficient with
+                            GitHub and TFS, ensuring smooth version control and effective team collaboration.</li>
+                          <li><strong style="color: #FFC107;">UI/UX & Graphic Design: </strong> A strong understanding
+                            of UI/UX principles, blending my development expertise with graphic design to enhance user
+                            experience.</li>
                         </ul>
                         <p>In my work, I am committed to managing the full software development lifecycle—from
                           requirements gathering and system design to deployment and ongoing support. I strive to build
@@ -416,7 +426,7 @@
 
                   </div>
                   <!-- col end -->
-                   <!-- col -->
+                  <!-- col -->
                   <div class="col-12 col-xl-6">
                     <!-- contact card -->
                     <div class="art-a art-card">
@@ -459,7 +469,7 @@
                     <!-- contact card end -->
                   </div>
                   <!-- col end -->
-                  
+
 
                   <!-- col -->
                   <div class="col-lg-12">
@@ -567,6 +577,18 @@
                     <span id="copyright">
                       <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
                     </span> Abdul Basit
+                  </div>
+                  <div>
+                    <!-- social link -->
+                    <a href="https://www.linkedin.com/in/abdulbasitmangral" target="_blank"><i
+                        class="fab fa-linkedin-in"></i></a>
+                    <!-- social link -->
+                    <a href="https://www.facebook.com/weabdulbasit" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <!-- social link -->
+                    <a href="https://www.instagram.com/weabdulbasit" target="_blank"><i
+                        class="fab fa-instagram"></i></a>
+                    <!-- social link -->
+                    <a href="https://x.com/weabdulbasit" target="_blank"><i class="fab fa-twitter"></i></a>
                   </div>
                 </footer>
                 <!-- footer end -->
