--- a/index.html
+++ b/index.html
@@ -816,17 +816,24 @@
                     </span> Abdul Basit
                   </div>
                   <div>
-                    <!-- social link -->
-                    <a href="https://www.linkedin.com/in/abdulbasitmangral" target="_blank"><i
-                        class="fab fa-linkedin-in"></i></a>
-                    <!-- social link -->
-                    <a href="https://www.facebook.com/weabdulbasit" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <!-- social link -->
-                    <a href="https://www.instagram.com/weabdulbasit" target="_blank"><i
-                        class="fab fa-instagram"></i></a>
-                    <!-- social link -->
-                    <a href="https://x.com/weabdulbasit" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <!-- LinkedIn link -->
+                    <a href="https://www.linkedin.com/in/abdulbasitmangral" onclick="window.open(this.href, '_blank'); return false;">
+                      <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <!-- Facebook link -->
+                    <a href="https://www.facebook.com/weabdulbasit" onclick="window.open(this.href, '_blank'); return false;">
+                      <i class="fab fa-facebook"></i>
+                    </a>
+                    <!-- Instagram link -->
+                    <a href="https://www.instagram.com/weabdulbasit" onclick="window.open(this.href, '_blank'); return false;">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                    <!-- X (Twitter) link -->
+                    <a href="https://x.com/weabdulbasit" onclick="window.open(this.href, '_blank'); return false;">
+                      <i class="fab fa-twitter"></i>
+                    </a>
                   </div>
+                  
                 </footer>
                 <!-- footer end -->
 
